Fix broken icode directive.

--- a/src/binary.tex
+++ b/src/binary.tex
@@ -5,7 +5,7 @@ Here we are, ground zero in every book about assembly programming. Where the rea
 finds themselves in an awkdward sit-down discussion about the B word. It's a necessary evil
 of course. Nothing will ever make sense without a rudimentary but slowly growing
 grasp of what bytes are and why they keep being referred to in a confusing mixture
-of letters and numbers such as \icode{\$D012} and icode{\$F4}.
+of letters and numbers such as \icode{\$D012} and \icode{\$F4}.
 
 So what am I supposed to do with you here? Succeed where every other author has
 usually failed? I assume that's the expectation. OK here goes.
