--- a/src/book.tex
+++ b/src/book.tex
@@ -419,6 +419,12 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \usepackage{pdflscape}
 \usepackage[figuresright]{rotating}
 
+\usepackage[
+  type={CC},
+  modifier={by-nc-sa},
+  version={3.0},
+]{doclicense}
+
 \begin{document}    
 \ifx\forprint\undefined
 \includepdf{\base/illu/cover_front.pdf}
@@ -427,7 +433,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \blankpage
 \fi
 
-%\subfile{src/forewords}
+\subfile{src/copyright}
 
 \tableofcontents 
 
