Update to metadata

--- a/notebooks/Create Appendix File with Level Data and Plotted Enemy Sprites.ipynb
+++ b/notebooks/Create Appendix File with Level Data and Plotted Enemy Sprites.ipynb
@@ -85,142 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sprite_map = {\n",
-    "\"\" : \"NO_SPRITE\",\n",
-    "\"f7\": \"LICKERSHIP\",\n",
-    "\"fa\": \"LICKERSHIP_INV\",\n",
-    "\"21\": \"BALLOON\",\n",
-    "\"22\": \"BALLOON\",\n",
-    "\"23\": \"BIRD\",\n",
-    "\"24\": \"BIRD\",\n",
-    "\"25\": \"BIRD\",\n",
-    "\"26\": \"BIRD\",\n",
-    "\"27\": \"SMALL_BALL\",\n",
-    "\"28\": \"SMALL_BALL\",\n",
-    "\"29\": \"SMALL_BALL\",\n",
-    "\"2a\": \"QBERT_SQUARES\",\n",
-    "\"2b\": \"QBERT\",\n",
-    "\"2c\": \"LOZENGE\",\n",
-    "\"2d\": \"MAGIC_MUSHROOM\",\n",
-    "\"2e\": \"INV_MAGIC_MUSHROOM\",\n",
-    "\"2f\": \"SMALLBALL_AGAIN\",\n",
-    "\"30\": \"CAMEL\",\n",
-    "\"31\": \"FLYING_DART\",\n",
-    "\"32\": \"FLYING_DART\",\n",
-    "\"33\": \"FLYING_DART\",\n",
-    "\"34\": \"FLYING_DART\",\n",
-    "\"35\": \"WINGED_BALL\",\n",
-    "\"36\": \"WINGED_BALL\",\n",
-    "\"37\": \"WINGED_BALL\",\n",
-    "\"38\": \"MONEY_BAG\",\n",
-    "\"39\": \"MONEY_BAG\",\n",
-    "\"3a\": \"TITAN_ROCKET\",\n",
-    "\"3f\": \"BUBBLE\",\n",
-    "\"3b\": \"BOUNCY_RING\",\n",
-    "\"3c\": \"BOUNCY_RING\",\n",
-    "\"3d\": \"BOUNCY_RING\",\n",
-    "\"3e\": \"BUBBLE\",\n",
-    "\"a0\": \"FLYING_SAUCER\",\n",
-    "\"a1\": \"FLYING_SAUCER\",\n",
-    "\"a2\": \"FLYING_SAUCER\",\n",
-    "\"a3\": \"FLYING_COMMA\",\n",
-    "\"a4\": \"FLYING_COMMA\",\n",
-    "\"a5\": \"FLYING_DOT\",\n",
-    "\"a6\": \"FLYING_DOT\",\n",
-    "\"a7\": \"BOLAS\",\n",
-    "\"a8\": \"BOLAS\",\n",
-    "\"a9\": \"BOLAS\",\n",
-    "\"aa\": \"BOLAS\",\n",
-    "\"ab\": \"STARSHIP\",\n",
-    "\"ac\": \"FLYING_TRIANGLE\",\n",
-    "\"ad\": \"FLYING_TRIANGLE\",\n",
-    "\"ae\": \"FLYING_FLOWCHART\",\n",
-    "\"af\": \"FLYING_FLOWCHART\",\n",
-    "\"b0\": \"FLYING_COCK\",\n",
-    "\"b1\": \"FLYING_COCK\",\n",
-    "\"b2\": \"FLYING_COCK_RIGHT\",\n",
-    "\"b3\": \"FLYING_COCK_RIGHT\",\n",
-    "\"b4\": \"CUMMING_COCK\",\n",
-    "\"b5\": \"CUMMING_COCK\",\n",
-    "\"b6\": \"CUMMING_COCK\",\n",
-    "\"b7\": \"CUMMING_COCK\",\n",
-    "\"b8\": \"STRANGE_SYMBOL\",\n",
-    "\"b9\": \"COPTIC_CROSS\",\n",
-    "\"ba\": \"EYE_OF_HORUS\",\n",
-    "\"bb\": \"PSI\",\n",
-    "\"bc\": \"BULLHEAD\",\n",
-    "\"bd\": \"ATARI_ST\",\n",
-    "\"be\": \"FLYING_BAR\",\n",
-    "\"bf\": \"FLYING_BAR\",\n",
-    "\"c0\": \"STARFIELD_SPRITE\",\n",
-    "\"c1\": \"LAND_GILBY\",\n",
-    "\"c2\": \"LAND_GILBY\",\n",
-    "\"c3\": \"LAND_GILBY\",\n",
-    "\"c4\": \"LAND_GILBY\",\n",
-    "\"c5\": \"LAND_GILBY\",\n",
-    "\"c6\": \"LAND_GILBY\",\n",
-    "\"c7\": \"LAND_GILBY\",\n",
-    "\"c8\": \"LAND_GILBY\",\n",
-    "\"c9\": \"LAND_GILBY\",\n",
-    "\"ca\": \"LAND_GILBY\",\n",
-    "\"cb\": \"LAND_GILBY\",\n",
-    "\"cc\": \"GILBY_TAKING_OFF\",\n",
-    "\"cd\": \"GILBY_TAKING_OFF\",\n",
-    "\"ce\": \"GILBY_TAKING_OFF\",\n",
-    "\"cf\": \"GILBY_TAKING_OFF\",\n",
-    "\"d0\": \"GILBY_TAKING_OFF\",\n",
-    "\"d1\": \"GILBY_AIRBORNE_LEFT\",\n",
-    "\"d2\": \"GILBY_AIRBORNE_TURNING\",\n",
-    "\"d3\": \"GILBY_AIRBORNE_RIGHT\",\n",
-    "\"d4\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"d5\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"d6\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"d7\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"d8\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"d9\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"da\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"db\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"dc\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"dd\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"de\": \"LAND_GILBY_LOWERPLANET\",\n",
-    "\"df\": \"GILBY_TAKING_OFF_LOWERPLANET\",\n",
-    "\"e0\": \"GILBY_TAKING_OFF_LOWERPLANET\",\n",
-    "\"e1\": \"GILBY_TAKING_OFF_LOWERPLANET\",\n",
-    "\"e2\": \"GILBY_TAKING_OFF_LOWERPLANET\",\n",
-    "\"e3\": \"GILBY_TAKING_OFF_LOWERPLANET\",\n",
-    "\"e4\": \"GILBY_AIRBORNE_LOWERPLANET_RIGHT\",\n",
-    "\"e5\": \"GILBY_AIRBORNED_TURNING_LOWER_PLANET\",\n",
-    "\"e6\": \"GILBY_AIRBORNED_LOWERPLANET_LEFT\",\n",
-    "\"e7\": \"SMALLDOT\",\n",
-    "\"e8\": \"SPINNING_RING\",\n",
-    "\"e9\": \"SPINNING_RING\",\n",
-    "\"ea\": \"SPINNING_RING\",\n",
-    "\"eb\": \"SPINNING_RING\",\n",
-    "\"ec\": \"LASER_BULLET\",\n",
-    "\"ed\": \"EXPLOSION_START\",\n",
-    "\"ee\": \"EXPLOSION_MIDDLE\",\n",
-    "\"ef\": \"EXPLOSION_END\",\n",
-    "\"f0\": \"BLANK_SPRITE\",\n",
-    "\"f1\": \"BIG_I\",\n",
-    "\"f2\": \"BIG_R\",\n",
-    "\"f3\": \"BIG_D\",\n",
-    "\"f4\": \"BIG_S\",\n",
-    "\"f5\": \"ALPHA\",\n",
-    "\"f6\": \"LICKER_SHIP\",\n",
-    "\"f7\": \"LICKERSHIP\",\n",
-    "\"f8\": \"LICKERSHIP\",\n",
-    "\"f9\": \"LICKERSHIP_INV\",\n",
-    "\"fa\": \"LICKERSHIP_INV\",\n",
-    "\"fb\": \"LICKERSHIP_INV\",\n",
-    "\"fc\": \"TEARDROP_EXPLOSION\",\n",
-    "\"fd\": \"TEARDROP_EXPLOSION\",\n",
-    "\"fe\": \"TEARDROP_EXPLOSION\",\n",
-    "\"ff\": \"LLAMA\",\n",
-    "}"
+    "from sprite_map import sprite_map \n"
    ]
   },
   {
@@ -532,12 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_file = \"IridisAlphaTitleEnemySpriteMovements.txt\"\n",
-    "input_file = open(log_file,'r')\n",
+    "import gzip\n",
+    "log_file = \"IridisAlphaTitleEnemySpriteMovements.txt.gz\"\n",
+    "input_file = gzip.open(log_file,'rt')\n",
     "\n",
     "movements = [ [] for _ in range(8) ]\n",
     "for l in input_file.readlines():\n",
