--- a/src/bonusphase.tex
+++ b/src/bonusphase.tex
@@ -67,7 +67,7 @@ bpRasterPositionArray     .BYTE $01,$01,$01,$01,$02,$02,$02,$02
                           .BYTE $07,$07,$07,$07,$07,$07,$00
 \end{lstlisting}
 
-Each value in here gets added to the current raster interrupt position (\icode{ADC \$D012}).
+Each value in here gets added to the current \index{raster} interrupt position (\icode{ADC \$D012}).
 The further we go down the screen the taller the bars become.
 
 \begin{figure}[H]
