--- a/src/book.tex
+++ b/src/book.tex
@@ -1,7 +1,12 @@
 \documentclass[twoside,openright]{book}                            
-                                                                        
 \usepackage[sfdefault]{roboto}   
 
+% Usage of /href
+% Disable decoration
+\usepackage[hidelinks]{hyperref}
+\hypersetup{ pdfauthor={Rob Hogan},
+  pdftitle={Iridis Alpha Theory},
+  pdfkeywords={C64 6502 Llamasoft Iridis Alpha Jeff Minter}}
 
 \usepackage[margin=1in]{geometry}                                       
 \setlength\paperwidth{7.5in}                                            
@@ -83,9 +88,6 @@
 %make footnote stick to the bottom of the page                          
 \usepackage[bottom]{footmisc}                                           
 
-% Usage of /href
-\usepackage[hidelinks]{hyperref}
-% Disable decoration
 
                                                                         
 \usepackage{subfiles}
@@ -386,7 +388,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 %Index stuff
 \usepackage{imakeidx}
-\makeindex[columns=2, title=Index]
+\makeindex[columns=2, title=Index,intoc]
 
 %Remove space above itemize
 \usepackage{enumitem}
@@ -437,27 +439,27 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \tableofcontents 
 
-%\subfile{src/preface} %draft
-%\subfile{src/bumph} %draft
-%\subfile{src/binary} %draft
-%\subfile{src/archaeo} %draft
-%\subfile{src/disassembly} %draft
-%\subfile{src/titlescreen}
-%\subfile{src/planets} % draft
-%\subfile{src/main_game} % draft
-%\subfile{src/level_data} % draft
+\subfile{src/preface} %draft
+\subfile{src/binary} %draft
+\subfile{src/archaeo} %draft
+\subfile{src/disassembly} %draft
+\subfile{src/titlescreen}
+\subfile{src/planets} % draft
+\subfile{src/main_game} % draft
+\subfile{src/level_data} % draft
 \subfile{src/bonusphase} % draft
-%\subfile{src/music} % draft
-%\subfile{src/torus} % draft
-%\subfile{src/dna} % wip
+\subfile{src/music} % draft
 %\subfile{src/mif}
-%\subfile{src/bugs} %draft
-%\appendix
-%\subfile{src/torus-animation} % draft
-%\subfile{src/level_data_appendix} %draft
-%\subfile{src/planets_appendix} % draft
-%\subfile{src/music_appendix} % draft
+\subfile{src/dna} % wip
+\subfile{src/torus} % draft
+\subfile{src/bugs} %draft
+\appendix
+\subfile{src/torus-animation} % draft
+\subfile{src/level_data_appendix} %draft
+\subfile{src/planets_appendix} % draft
+\subfile{src/music_appendix} % draft
 \subfile{src/bonusphase_appendix} % draft
+\subfile{src/bumph} %draft
 
 % Obsolete
 %\subfile{src/level_data_appendix_detail} % draft obsolete?
