--- a/src/book.tex
+++ b/src/book.tex
@@ -3,10 +3,19 @@
 
 % Usage of /href
 % Disable decoration
-\usepackage[hidelinks]{hyperref}
-\hypersetup{ pdfauthor={Rob Hogan},
-  pdftitle={Iridis Alpha Theory},
-  pdfkeywords={C64 6502 Llamasoft Iridis Alpha Jeff Minter}}
+\usepackage{hyperxmp}[2020/03/01]
+\usepackage[pdfa,pdfusetitle,hidelinks]{hyperref}
+\usepackage{mmap} %only needed for pdfTeX
+
+\hypersetup{%
+pdflang=la
+pdfapart=3,
+pdfaconformance=b,
+pdftitle={Iridis Alpha Theory},%
+pdfauthor=Rob Hogan,%
+pdfsubject={The Making and Mechanics of Iridis Alpha},%
+pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
+}
 
 \usepackage[margin=1in]{geometry}                                       
 \setlength\paperwidth{7.5in}                                            
@@ -449,12 +458,12 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \subfile{src/level_data} % draft
 \subfile{src/bonusphase} % draft
 \subfile{src/music} % draft
+\subfile{src/torus} % draft
 %\subfile{src/mif}
 \subfile{src/dna} % wip
-\subfile{src/torus} % draft
+\subfile{src/torus-animation} % draft
 \subfile{src/bugs} %draft
 \appendix
-\subfile{src/torus-animation} % draft
 \subfile{src/level_data_appendix} %draft
 \subfile{src/planets_appendix} % draft
 \subfile{src/music_appendix} % draft
