--- a/src/book.tex
+++ b/src/book.tex
@@ -129,6 +129,7 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 \usepackage[justification=centering,labelfont=bf]{caption}
 %\captionsetup{belowskip=-15pt, aboveskip=8pt}
 \captionsetup[figure]{font=footnotesize,labelfont=footnotesize}
+\captionsetup[lstlisting]{font=footnotesize,labelfont=footnotesize}
 \captionsetup[subfigure]{font=footnotesize,labelfont=footnotesize,labelformat=empty}
 
 % Cover is a pdf that is included
