Update sprite sheets

--- a/src/bib.tex
+++ b/src/bib.tex
@@ -10,7 +10,21 @@
 \bibitem{MegaSave} 
   \textbf{The Megasave Loader},
   \href{https://www.luigidifraia.com/doku/doku.php?id=commodore:tapes:loaders:mega-save}{Luigi Di Fraia's Mega SaveLoader page}.
-
+\bibitem{LlamasoftHistory} 
+  \textbf{A History of Llamasoft},
+  \href{http://minotaurproject.co.uk/YakImages/AHistoryofLlamasoft.pdf}{Jeff Minter's memoir of the early years of Llamasoft}.
+\bibitem{c64prg} 
+  \textbf{C64 Programmer's Reference Guide},
+  \href{https://archive.org/details/c64-programmer-ref}{The bible for C64 programmers}.
+\bibitem{6502} 
+  \textbf{Programming the 6502}, Rodnay Zaks
+  \href{https://archive.org/details/Programming_the_6502_OCR}{The book used by Jeff Minter to learn assembly.} "Learning Machine Code ... I used PROGRAMMING THE 6502 by Rodney Zaks as a good 6502 book, and used the VIC and 64 Programmers Reference Guides for each machine. The VIC REVEALED is also good for VIC 20 owners."
+\bibitem{ia} 
+  \textbf{Iridis Alpha Source Code},
+  \href{https://github.com/mwenge/iridisalpha}{Source code for Iridis Alpha, reverse-engineered by the author of this book.}
+\bibitem{iridisdownload} 
+  \textbf{Iridis Alpha: Tape Download},
+  \href{http://www.llamasoftarchive.org/oldsite/llamasoft/cbm64/IridisAlpha.zip}{A tape copy of Iridis Alpha.}
 
 
 \end{thebibliography}
