--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -24,6 +24,12 @@
 ;    MAY YOU SHARE FREELY, NEVER TAKING MORE THAN YOU GIVE.
 \end{lstlisting}
 
+\begin{figure}[H]
+    \centering
+      \includegraphics[width=10cm]{src/bumph/sketch.png}%
+\caption{Concept sketch of Iridis Alpha by Jeff Minter.}
+\end{figure}
+
 \vspace*{\fill}
 Copyright \textcopyright\ Rob Hogan, All Rights Reserved.
 
