--- a/src/book.tex
+++ b/src/book.tex
@@ -3,10 +3,10 @@
 
 % Usage of /href
 % Disable decoration
+\ifx\forprint\undefined
 \usepackage{hyperxmp}[2020/03/01]
 \usepackage[pdfa,pdfusetitle,hidelinks]{hyperref}
 \usepackage{mmap} %only needed for pdfTeX
-
 \hypersetup{%
 pdflang=la
 pdfapart=3,
@@ -16,6 +16,9 @@ pdfauthor=Rob Hogan,%
 pdfsubject={The Making and Mechanics of Iridis Alpha},%
 pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 }
+\else
+\usepackage[hidelinks]{hyperref}
+\fi
 
 \usepackage[margin=1in]{geometry}                                       
 \setlength\paperwidth{7.5in}                                            
@@ -479,8 +482,6 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \subfile{src/bib}
 
-% Add these later
-\iffalse
 
 \ifx\forprint\undefined
    \includepdf{\base/illu/cover_back.pdf}
@@ -490,7 +491,6 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
     \blankpage      
     \blankpage 
     \blankpage
-\fi
 \fi
 
 \end{document}
