--- a/src/level_data.tex
+++ b/src/level_data.tex
@@ -299,7 +299,7 @@ AnimateLowerPlanetAttackShips
 \end{lstlisting}
 
 If it is zero, it instead gets reset to the initial value from Byte 2 (stored in
- \icode{upperPlanetAttackShipInitialFrameRate})
+ \icode{upperPlanet\-AttackShipInitialFrameRate})
 and the current sprite for the enemy ship is incremented to point to the next 'frame' of the ship's animation:
 
 \begin{lstlisting}
