--- a/src/main_game.tex
+++ b/src/main_game.tex
@@ -224,7 +224,7 @@ occasion (notice how much the bush moves). At the same time we're applying a pix
 to preserve the impression of smoothness.
 
 \subsubsection{Pixel Movement}
-If we look at the code that looks after the pixel-grained movement in \icode{AnimateStarFieldAndScrollPlanets}
+If we look at the code that looks after the pixel-grained movement in \icode{AnimateStar\-FieldAndScrollPlanets}
 we can see it is using a variable called \icode{planetScrollSpeed} to control the amount of offset to apply:
 
 \begin{lstlisting}[]
@@ -1439,7 +1439,7 @@ experiment obviously didn't work as they ended up on the cutting room floor, wit
 {
   \setlength{\tabcolsep}{1.0pt}
   \setlength\cmidrulewidth{\heavyrulewidth} % Make cmidrule = 
-    \begin{adjustbox}{width=14cm,center}
+    \begin{adjustbox}{width=13.5cm,center}
   \begin{tabular}{ccc}
   \toprule
     Spectrogram & Amplitude & Sound \\
