Some work on Enemy Level chapter

--- a/notebooks/LevelDataTables.ipynb
+++ b/notebooks/LevelDataTables.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "200"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,36 +122,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "planet3Level4Data $04 gilbyLookingLeft\n",
-      "planet3Level6Data $04 planet3Level6Additional\n",
-      "planet5Level5Data $05 planet5Level5Additional\n",
-      "fighterShipAsExplosion $01 planet3Level10Data\n",
-      "planet2Level19Data $0C landGilbyAsEnemy\n",
-      "planet5Level14Data $06 llamaWaveData\n",
-      "planet1Level11Data $03 smallDotWaveData\n",
-      "smallDotWaveData $01 smallDot2WaveData\n",
-      "planet1Level14Data $03 planet1Level8Data\n",
-      "planet5Level3Data $01 planet5Level3Additional\n",
-      "planet5Level3Data2ndStage $01 planet5Level3Additional\n",
-      "planet4Level19Data $01 planet4Level19Additional\n"
+      "planet4Level19Additional planet4Level19Additional2ndWave\n",
+      "planet2Level7Data secondExplosionAnimation\n",
+      "planet2Level7Data2ndStage secondExplosionAnimation\n",
+      "planet4Level4Data spinningRings\n",
+      "planet4Level4Data2ndStage planet4Level4Data\n",
+      "planet4Level3Data planet1Level5Data3rdStage\n",
+      "planet4Level2Data2ndStage spinningRings\n",
+      "planet1Level9Data defaultExplosion\n",
+      "planet1Level9DataSecondStage secondExplosionAnimation\n",
+      "planet3Level3Data secondExplosionAnimation\n",
+      "planet3Level3Data2ndStage secondExplosionAnimation\n",
+      "planet3Level3Data3rdStage defaultExplosion\n",
+      "planet2Level8Data planet2Level8Data2ndStage\n",
+      "planet2Level8Data2ndStage spinningRings\n",
+      "planet2Level8Data3rdStage spinningRings\n",
+      "planet2Level9Data gilbyTakingOffAsExplosion\n",
+      "gilbyLookingLeft secondExplosionAnimation\n",
+      "planet3Level4Data secondExplosionAnimation\n",
+      "planet3Level5Data stickyGlobeExplosion\n",
+      "planet3Level6Data planet2Level9Data\n",
+      "planet3Level6Additional defaultExplosion\n",
+      "planet1Level17Data gilbyLookingLeft\n",
+      "planet1Level17Data2ndStage secondExplosionAnimation\n",
+      "planet1Level17Data3rdStage secondExplosionAnimation\n",
+      "planet4Level6Data spinningRings\n",
+      "planet4Level6Data2ndStage spinningRings\n",
+      "planet1Level6Data spinningRings2ndType\n",
+      "planet1Level6Data2ndStage spinningRings2ndType\n",
+      "planet1Level10Data planet1Level10Data2ndStage\n",
+      "planet1Level10Data2ndStage spinningRings\n",
+      "planet3Level2Data secondExplosionAnimation\n",
+      "planet3Level2Data2ndStage secondExplosionAnimation\n",
+      "planet3Level2Data3rdStage secondExplosionAnimation\n",
+      "planet3Level8Data bubbleExplosion\n",
+      "bubbleExplosion bubbleExplosion2ndStage\n",
+      "bubbleExplosion2ndStage planet2Level8Data2ndStage\n",
+      "planet4Level5Data secondExplosionAnimation\n",
+      "planet4Level5Data2ndStage defaultExplosion\n",
+      "planet1Level15Data teardropExplosion\n",
+      "teardropExplosion defaultExplosion\n",
+      "planet4Level17Data cummingCock\n",
+      "cummingCock planet1Level8Data2ndStage\n",
+      "planet1Level4Data planet1Level4Data2ndStage\n",
+      "planet1Level4Data2ndStage spinningRings\n",
+      "planet5Level5Data spinningRings\n",
+      "planet5Level5Data2ndStage spinningRings\n",
+      "planet5Level5Additional defaultExplosion\n",
+      "planet3Level10Data spinningRings\n",
+      "planet3Level10Data2ndStage spinningRings\n",
+      "planet4Level10Data spinningRings\n",
+      "planet4Level10Data2ndStage planet4Level10Data\n",
+      "planet5Level6Data fighterShipAsExplosion\n",
+      "planet4Level15Data spinnerAsExplosion\n",
+      "planet2Level10Data flowchartArrowAsExplosion\n",
+      "planet3Level13Data lickerShipAsExplosion\n",
+      "planet3Level13Data3rdStage spinningRings\n",
+      "planet3Level19Data planet4Level17Data\n",
+      "planet3Level19Data2ndStage planet1Level13Data\n",
+      "planet3Level19Data3rdStage planet1Level4Data\n",
+      "planet5Level1Data spinningRings\n",
+      "planet5Level1Data2ndStage spinningRings\n",
+      "planet4Level1Data spinningRings\n",
+      "planet4Level1Data2ndStage spinningRings\n",
+      "planet3Level1Data $50\n",
+      "planet2Level1Data pinAsExplosion\n",
+      "planet1Level1Data spinningRings\n",
+      "planet1Level1Data2ndStage spinningRings\n",
+      "planet1Level7Data planet1Level7Data2ndStage\n",
+      "planet1Level7Data2ndStage planet1Level7Data3rdStage\n",
+      "planet1Level7Data3rdStage barExplosion\n",
+      "planet1Level20Data planet1Level20Data\n",
+      "planet2Level20Data planet2Level20Data\n",
+      "planet3Level20Data planet3Level20Data\n",
+      "planet4Level20Data planet4Level20Data\n",
+      "planet5Level20Data planet5Level20Data\n",
+      "planet5Level2Data planet5Level2Explosion\n",
+      "planet5Level2Explosion spinningRings\n",
+      "planet3Level14Data planet3Level14Data2ndStage\n",
+      "planet3Level14Data2ndStage planet3Level14Data2ndStage\n",
+      "planet1Level3Data lickerShipWaveData\n",
+      "planet1Level3Data2ndStage lickerShipWaveData\n",
+      "planet1Level3Data3rdStage lickerShipWaveData\n",
+      "planet2Level18Data2ndStage secondExplosionAnimation\n",
+      "planet2Level18Data defaultExplosion\n",
+      "planet2Level19Data planet2Level19Data2ndStage\n",
+      "landGilbyAsEnemy planet2Level19Data2ndStage\n",
+      "planet2Level12Data planet2Level1Data\n",
+      "planet3Level15Data planet3Level15Data2ndStage\n",
+      "planet3Level18Data planet3Level18Data2ndStage\n",
+      "planet3Level18Data2ndStage planet3Level18Data2ndStage\n",
+      "planet4Level12Data planet4Level12Data2ndStage\n",
+      "planet4Level12Data2ndStage planet4Level12Data2ndStage\n",
+      "planet2Level13Data planet2Level13Data2ndStage\n",
+      "planet2Level2Data secondExplosionAnimation\n",
+      "planet2Level3Data secondExplosionAnimation\n",
+      "planet2Level14Data planet2Level14Data2ndStage\n",
+      "planet2Level17Data planet2Level17Data2ndStage\n",
+      "planet4Level18Data secondExplosionAnimation\n",
+      "planet5Level7Data planet5Level7Data2ndStage\n",
+      "planet5Level7Data2ndStage planet5Level7Data\n",
+      "planet1Level16Data planet4Level19Data\n",
+      "planet1Level2Data spinningRings\n",
+      "planet4Level16Data planet4Level16Data2ndStage\n",
+      "planet4Level16Data2ndStage secondExplosionAnimation\n",
+      "planet5Level13Data planet5Level13Data2ndStage\n",
+      "planet5Level13Data2ndStage planet5Level13Data\n",
+      "planet4Level11Data planet4Level11Data2ndStage\n",
+      "planet5Level14Data spinningRings\n",
+      "llamaWaveData spinningRings\n",
+      "planet5Level15Data planet5Level15Data2ndStage\n",
+      "planet2Level15Data planet2Level15Data2ndStage\n",
+      "planet3Level16Data planet3Level16Data\n",
+      "planet1Level18Data planet1Level18Data2ndStage\n",
+      "planet1Level18Data2ndStage planet1Level18Data2ndStage\n",
+      "planet1Level19Data planet5Level6Data\n",
+      "planet5Level8Data planet1Level5Data\n",
+      "planet4Level13Data planet5Level5Data\n",
+      "planet5Level17Data planet3Level8Data\n",
+      "planet2Level16Data planet1Level9Data\n",
+      "planet5Level18Data planet1Level5Data3rdStage\n",
+      "planet3Level17Data planet5Level14Data\n",
+      "planet2Level5Data planet2Level5Data3rdStage\n",
+      "planet2Level5Data2ndStage planet2Level5Data3rdStage\n",
+      "planet3Level7Data spinningRings\n",
+      "planet3Level7Data2ndStage planet3Level7Data\n",
+      "planet2Level6Data secondExplosionAnimation\n",
+      "planet2Level6Data2ndStage secondExplosionAnimation\n",
+      "planet1Level11Data secondExplosionAnimation\n",
+      "smallDotWaveData lickerShipWaveData\n",
+      "smallDot2WaveData lickerShipWaveData\n",
+      "planet1Level12Data planet1Level2Data2ndStage\n",
+      "planet3Level9Data secondExplosionAnimation\n",
+      "planet3Level9Data2ndStage defaultExplosion\n",
+      "planet5Level9Data planet5Level9Data2ndStage\n",
+      "planet5Level9Data2ndStage defaultExplosion\n",
+      "planet3Level12Data planet3Level12Data2ndStage\n",
+      "planet3Level12Data2ndStage defaultExplosion\n",
+      "planet4Level2Data planet4Leve2Data2ndStage\n",
+      "planet4Leve2Data2ndStage planet1Level12Data3rdStage\n",
+      "planet1Level8Data planet1Level8Data2ndStage\n",
+      "planet1Level14Data planet1Level8Data\n",
+      "planet1Level13Data planet1Level13Data2ndStage\n",
+      "planet4Level7Data defaultExplosion\n",
+      "planet4Level14Data planet4Level14Data2ndStage\n",
+      "planet4Level14Data2ndStage secondExplosionAnimation\n",
+      "planet5Level10Data lickerShipWaveData\n",
+      "planet2Level4Data secondExplosionAnimation\n",
+      "f1550 secondExplosionAnimation\n",
+      "planet5Level3Data planet5Level3Data2ndStage\n",
+      "planet5Level3Data2ndStage planet5Level3Data\n",
+      "planet5Level3Additional defaultExplosion\n",
+      "unusedLlamaWaveData llamaExplosionData\n",
+      "planet3Level11Data planet3Level11Data2ndStage\n",
+      "planet5Level11Data planet5Level11Data2ndStage\n",
+      "planet5Level4Data spinningRings\n",
+      "planet4Level8Data planet4Level8Data\n",
+      "planet4Level8Data2ndStage spinningRings\n",
+      "planet4Level9Data spinningRings\n",
+      "planet4Level9Data2ndStage spinningRings\n",
+      "planet1Level5Data planet1Level5Data3rdStage\n",
+      "planet1Level5Data2ndStage planet1Level5Data3rdStage\n",
+      "planet1Level5Data3rdStage planet1Level5Data4thStage\n",
+      "planet1Level5Data4thStage spinningRings\n",
+      "planet4Level19Data spinningRings\n"
      ]
     }
    ],
    "source": [
     "#l = [\"Byte 15\", \"Byte 34\", \"Byte 33\", \"Byte 7 \"]\n",
-    "l = [\"Byte 7 \", \"Byte 9 \"]\n",
+    "l = [\"Byte 30\"]\n",
     "for k,c in level_data.items():\n",
-    "    b7 = c[\"Byte 7 \"]\n",
-    "    b9 = c[\"Byte 9 \"]\n",
-    "    if b7 != \"$00\" and b9 != \"nullPtr\":\n",
-    "        print(k, b7,b9)"
+    "    b9 = c[\"Byte 30\"]\n",
+    "    if b9 != \"nullPtr\":\n",
+    "        print(k,b9)"
    ]
   },
   {
