Add to the preface and title pages

--- a/src/bonusphase.tex
+++ b/src/bonusphase.tex
@@ -1,4 +1,6 @@
 \chapter{Congoatulations Hotshot} 
+\label{sec:bonus}
+
 \lstset{style=6502Style}
 
 This decidedly ropey mini-game has a few interesting features.
