--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -1,37 +1,25 @@
+
+\vspace*{\fill}
+\begin{figure}[H]
+    \centering
+      \includegraphics[width=10cm]{src/cover/title_page.png}%
+\end{figure}
+\vspace*{\fill}
+\thispagestyle{empty}%
+
 \clearpage
-\lstset{style=6502Style}
-
-\begin{lstlisting}[escapeinside={!}{!},caption=Copyright notice for the reverse-engineered code of 'Iridis Alpha']
-; THIS BOOK CONTAINS THE REVERSE-ENGINEERED SOURCE CODE FOR 
-; THE GAME 'IRIDIS ALPHA' WRITTEN BY JEFF MINTER IN 1986.
-;
-; THE CODE WAS CREATED BY DISASSEMBLING A BINARY OF THE GAME
-; RELEASED INTO THE PUBLIC DOMAIN IN 2019.
-;
-; THE ORIGINAL CODE FROM WHICH THIS SOURCE IS DERIVED IS 
-; THE COPYRIGHT OF JEFF MINTER.
-;
-; THE ORIGINAL HOME OF THIS CODE IS AT: 
-;  !\href{https://github.com/mwenge/iridisalpha}{https://github.com/mwenge/iridisalpha}!
-;
-; TO THE EXTENT TO WHICH ANY COPYRIGHT MAY APPLY TO THE ACT OF 
-; DISASSEMBLING AND RECONSTRUCTING THE CODE FROM ITS BINARY, 
-; THE AUTHOR DISCLAIMS COPYRIGHT TO THIS SOURCE CODE.  IN PLACE OF
-; A LEGAL NOTICE, HERE IS A BLESSING:
-;
-;    MAY YOU DO GOOD AND NOT EVIL.
-;    MAY YOU FIND FORGIVENESS FOR YOURSELF AND FORGIVE OTHERS.
-;    MAY YOU SHARE FREELY, NEVER TAKING MORE THAN YOU GIVE.
-\end{lstlisting}
-
+\vspace*{\fill}
 \begin{figure}[H]
     \centering
       \includegraphics[width=10cm]{src/bumph/sketch.png}%
-\caption{Concept sketch of Iridis Alpha by Jeff Minter.}
+\caption*{Concept sketch for Iridis Alpha by Jeff Minter.}
 \end{figure}
 
 \vspace*{\fill}
-Copyright \textcopyright\ Rob Hogan, All Rights Reserved.
+\textcopyright\ Rob Hogan 2022-2023, All Rights Reserved.
+
+'Iridis Alpha' \textcopyright\ Jeff Minter 1986.
 
 \doclicenseThis
+\thispagestyle{empty}%
 \clearpage
