--- a/src/main_game.tex
+++ b/src/main_game.tex
@@ -1,4 +1,5 @@
 \chapter{Blasting, Fast and Slow} 
+\label{sec:blast}
 \lstset{style=6502Style}
 
 Every game has a 'main loop'. A tight section of code which is executed multiple times
