--- a/src/music.tex
+++ b/src/music.tex
@@ -1,4 +1,5 @@
 \chapter{A Hundred Thousand Billion Theme Tunes} 
+\label{sec:music}
 
 \lstset{style=6502Style}
 The theme music in Iridis Alpha is procedurally generated. There isn't a chunk of music
