--- a/src/planets.tex
+++ b/src/planets.tex
@@ -1,4 +1,5 @@
 \chapter{Making Planets for Nigel} 
+\label{sec:planets}
 
 \begin{q}{Jeff Minter's Development Diary in Zzap Magazine\cite{planner}}
 17 February 1986 
