--- a/src/titlescreen.tex
+++ b/src/titlescreen.tex
@@ -1,4 +1,5 @@
 \chapter{The First 16 Milliseconds} 
+\label{sec:first16}
 \lstset{style=6502Style}
 
 The race is now on to get the title sequence up on the screen. After a little more setup in \icode{MainControlLoop}
