--- a/src/torus.tex
+++ b/src/torus.tex
@@ -1,4 +1,5 @@
 \chapter{Another 16\textsuperscript{4} Tunes} 
+\label{sec:torusmusic}
 
 It's possible to dig into the making of the title music and how Jeff Minter
 arrived the music configuration he did thanks to a number of tiny demo programs that
