--- a/src/book.tex
+++ b/src/book.tex
@@ -31,11 +31,6 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 
  %Nice header with pages numbers                                         
 \usepackage{fancyhdr}                                                   
-% Make page number appear on botton right                               
-\pagestyle{fancy}                                                       
-\fancyfoot{}                                                            
-\fancyfoot[EL]{\thepage}                                                
-\fancyfoot[OR]{\thepage} 
 
 %------------- IMGs ------------------
 \usepackage{graphicx}                                                   
@@ -450,30 +445,36 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \subfile{src/copyright}
 
+% Make page number appear on botton right                               
+\pagestyle{fancy}                                                       
+\fancyfoot{}                                                            
+\fancyfoot[EL]{\thepage}                                                
+\fancyfoot[OR]{\thepage} 
+
 \tableofcontents 
 
 \subfile{src/preface} %draft
-%\subfile{src/binary} %draft
-%\subfile{src/archaeo} %draft
-%\subfile{src/disassembly} %draft
-%\subfile{src/titlescreen}
-%\subfile{src/planets} % draft
-%\subfile{src/main_game} % draft
+\subfile{src/binary} %draft
+\subfile{src/archaeo} %draft
+\subfile{src/disassembly} %draft
+\subfile{src/titlescreen}
+\subfile{src/planets} % draft
+\subfile{src/main_game} % draft
 \subfile{src/level_data} % draft
-%\subfile{src/bonusphase} % draft
-%\subfile{src/music} % draft
-%\subfile{src/torus} % draft
-%%\subfile{src/mif}
-%\subfile{src/dna} % wip
-%\subfile{src/torus-animation} % draft
-%\subfile{src/bugs} %draft
-%\appendix
-%\subfile{src/sprite_appendix} % draft
-%\subfile{src/level_data_appendix} %draft
-%\subfile{src/planets_appendix} % draft
-%\subfile{src/music_appendix} % draft
-%\subfile{src/bonusphase_appendix} % draft
-%\subfile{src/bumph} %draft
+\subfile{src/bonusphase} % draft
+\subfile{src/music} % draft
+\subfile{src/torus} % draft
+\subfile{src/mif}
+\subfile{src/dna} % wip
+\subfile{src/torus-animation} % draft
+\subfile{src/bugs} %draft
+\appendix
+\subfile{src/sprite_appendix} % draft
+\subfile{src/level_data_appendix} %draft
+\subfile{src/planets_appendix} % draft
+\subfile{src/music_appendix} % draft
+\subfile{src/bonusphase_appendix} % draft
+\subfile{src/bumph} %draft
 
 % Obsolete
 %\subfile{src/level_data_appendix_detail} % draft obsolete?
